fixed overflow error

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 
 
 }
-html,body{width:100%;height:91%;}
+body{width:100%;height:100%;}
 
 body{         
   background:url('http://farm1.staticflickr.com/36/111023917_8de2b23011_o.jpg')no-repeat;
